--- a/app/views/profiles/client_profile.html.erb
+++ b/app/views/profiles/client_profile.html.erb
@@ -4,7 +4,7 @@
   <%# Display profile photo here %>
 
   <h2><%=@user.first_name%>'s bio:</h2>
-  <p><%= @user.bio %></p>
+  <p><em><%= @user.bio %></em></p>
 
   <ul class="nav nav-tabs">
     <li class= "nav">
