--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -41,7 +41,13 @@
 
 .review-card p {
 margin-bottom: 2px;
+font-size: 14px;
 }
+
+.review-card h3 {
+  margin-bottom: 0px;
+  font-size: 16px;
+  }
 
 .review-card a {
 color:#FF6053;
@@ -50,13 +56,15 @@ text-decoration: none;
 
 .review-card img {
   margin-right: 8px;
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
   }
 
 .book-now {
   border-radius: 12px;
-}
+  // background-color: white !important;
+  // border-color: #63AEF2;
+}s
 
 .btn  {
   border-radius: 12px;
@@ -72,4 +80,8 @@ text-decoration: none;
 
 .blue {
   color: #63AEF2
+}
+
+.description p {
+  font-size: 14px !important;
 }
