--- a/app/assets/stylesheets/pages/_user-profile-owner.scss
+++ b/app/assets/stylesheets/pages/_user-profile-owner.scss
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+// .nav-tabs {
+//   border-top: 1px solid #dee2e6;
+// }
+
+
 // .nav-link {
 //   border-radius: 12px;
 // }
