--- a/app/views/profiles/partials/_client-show.html.erb
+++ b/app/views/profiles/partials/_client-show.html.erb
@@ -10,10 +10,10 @@
         <div class="card-trip mt-4">
           <div class="d-flex justify-content-between align-items-start">
             <h2>Your bio:</h2>
-            <%= link_to "Edit profile", edit_my_profile_path(@user), class: "btn btn-primary" %>
+            <%= link_to "Edit profile", edit_my_profile_path(@user), class: "btn btn-primary confirm-btn" %>
           </div>
-          <p><%= current_user.bio %></p>
-          <p class="line-break pb-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus delectus suscipit totam animi modi dolorem fugit? Sapiente, pariatur eum minus, fugiat magni unde</p>
+          <p><em><%= current_user.bio %></em></p>
+          <p class="line-break pb-4"><em>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus delectus suscipit totam animi modi dolorem fugit? Sapiente, pariatur eum minus, fugiat magni unde</em></p>
         </div>
       </div>
     </div>
