--- a/app/views/profiles/partials/_supplier-show.html.erb
+++ b/app/views/profiles/partials/_supplier-show.html.erb
@@ -12,7 +12,7 @@
           <h2>Your bio:</h2>
           <%= link_to "Edit profile", edit_my_profile_path(@user), class: "btn btn-primary confirm-btn" %>
         </div>
-        <p class="line-break pb-4"><%= current_user.bio %></p>
+        <p class="line-break pb-4"><em><%= current_user.bio %></em></p>
       </div>
     </div>
 
