--- a/app/views/profiles/partials/tabs/_confirmed-tab.html.erb
+++ b/app/views/profiles/partials/tabs/_confirmed-tab.html.erb
@@ -10,14 +10,14 @@
     <div class="d-flex justify-content-center align-items-center line-break-btn">
       <%= simple_form_for consultation do |f| %>
         <%= f.input :status, :as => :hidden, :input_html => { :value => "Cancelled" } %>
-        <%= f.submit "Cancel", class:"btn btn-primary confirm-btn mb-3"%>
+        <%= f.submit "Cancel", class:"btn btn-primary decline-btn mb-3"%>
       <% end %>
     </div>
     <div class="d-flex align-items-center date-box line-break-btn">
       <p><%= consultation.date_time.strftime("%A, %B %d, %Y ") %><strong><%= consultation.date_time.strftime("at %l%p") %></strong></p>
     </div>
     <div class="d-flex align-items-center date-box">
-      <p><strong><%= consultation.daycare.name %></strong></p>
+      <p><%= link_to consultation.daycare.name, daycare_path(consultation.daycare)%></p>
     </div>
   </div>
   <div class="line-break-consultations mt-2"></div>
