--- a/app/views/daycares/new.html.erb
+++ b/app/views/daycares/new.html.erb
@@ -2,6 +2,8 @@
   <%= simple_form_for(@daycare) do |f| %>
     <%= f.input :name %>
     <%= f.input :address %>
+    <%= f.input :email %>
+    <%= f.input :phone_number %>
     <%= f.input :description %>
     <%= f.input :price %>
     <%= f.input :number_of_openings %>
