--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,15 +6,15 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="d-flex flex-row align-items-center">
-    <%= form_tag root_path, method: :get do %>
-            <%= text_field_tag :query,
-              params[:query],
-              class: "form-control",
-              placeholder: "Find a Daycare"
-            %>
-            <% end %>
-            <div class="mx-2"><i class="fa-solid fa-magnifying-glass"></i></div>
+    <div class="d-flex flex-row align-items-center" data-controller="home">
+      <%= form_tag root_path, method: :get, data: { action: "submit->home#scroll" } do %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Find a Daycare"
+        %>
+      <% end %>
+      <div class="mx-2"><i class="fa-solid fa-magnifying-glass"></i></div>
     </div>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
