--- a/app/views/profiles/partials/client-tabs/_pending-tab.html.erb
+++ b/app/views/profiles/partials/client-tabs/_pending-tab.html.erb
@@ -34,7 +34,7 @@
                   <span class="fa fa-star"></span>
                 <% end %>
               </div>
-            <p class="mt-0"><%= consultation.date_time %></p>
+            <p class="mt-0"><%= consultation.start_time %></p>
             <p>Status:<%= consultation.status %></p>
           </div>
           <div>
