--- a/app/views/profiles/partials/_supplier-show.html.erb
+++ b/app/views/profiles/partials/_supplier-show.html.erb
@@ -14,12 +14,12 @@
         </div>
         <p class="line-break pb-4"><em><%= current_user.bio %></em></p>
           <h2>My Calendar:</h2>
-          <%= month_calendar(events: @consultations) do |date, consultations| %>
+          <%= month_calendar(events: @pending_consultations) do |date, consultations| %>
           <%= date %>
 
           <% consultations.each do |consultation| %>
           <div class="meeting">
-          <p><%= consultation.client.first_name %> <%= consultation.client.last_name %></p>
+          <p><%= consultation.client.first_name %> <%= consultation.client.last_name %> <small><%= consultation.start_time.strftime('%I:%M %p') %></small></p>
           </div>
           <% end %>
           <% end %>
