Added see more to daycare description

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -85,3 +85,18 @@ text-decoration: none;
 .description p {
   font-size: 14px !important;
 }
+
+.see-more-text p {
+  font-weight: 500;
+  margin-bottom: 4px;
+}
+
+.see-more {
+  text-align: center;
+}
+
+.see-more a {
+  text-decoration: none;
+  color: #63AEF2;
+  font-size: 14px;
+}
