--- a/app/views/profiles/partials/tabs/_daycares-tab.html.erb
+++ b/app/views/profiles/partials/tabs/_daycares-tab.html.erb
@@ -35,7 +35,7 @@
                 <% end %>
               </div>
             <p><%= daycare.address %></p>
-            <p><%= daycare.description %></p>
+            <p><em><%= daycare.description %></em></p>
           </div>
           <div class="d-flex justify-content-end">
             <div>
