--- a/app/views/daycares/index.html.erb
+++ b/app/views/daycares/index.html.erb
@@ -108,19 +108,17 @@
       </div>
     </div>
   </div>
-<%= form_tag daycares_path, method: :get do %>
-  <%= label_tag "select max price" %>
-  <%= range_field_tag :price,
-    params[:price],
-    in: 1...10, step: 1,
-    class: "form-control"
-  %>
-  <%= label_tag "select opening date" %>
-   <%= text_field_tag :opening,
-     params[:opening],
-     class: "form-control",
-     placeholder: "Find an opening date"
-    %>
-  <%= submit_tag "Search", class: "btn btn-primary" %>
+<%= form_with url: daycares_path, method: :get, class: "search-form" do |f| %>
+  <%= f.label "select max price" %>
+  <%= f.select :price, (0..30).to_a, class: "form-control" %>
+  <%# <%= label_tag "select opening date" %>
+   <%# <%= text_field_tag :opening, %>
+     <%# params[:opening], %>
+     <%# class: "form-control", %>
+     <%# placeholder: "Find an opening date" %>
+    <%# %>
+  <%= f.label "openings" %>
+  <%= f.select :opening, (1..5).to_a, class: "form-control" %>
+  <%= f.submit "Search", class: "btn btn-primary" %>
   <% end %>
 </div>
