--- a/app/views/daycares/edit.html.erb
+++ b/app/views/daycares/edit.html.erb
@@ -7,6 +7,7 @@
     <%= f.input :description %>
     <%= f.input :price %>
     <%= f.input :number_of_openings %>
+    <%= f.input :opening_date %>
     <%= f.association :tags, as: :check_boxes, collection_check_boxes: @tags, prompt: "Select relevant tags"%>
     <%= f.input :photos, as: :file, input_html: { multiple: true } %>
     <%#= f.input :photos, as: :file, input_html: { multiple: true } %>
