almost done filtering

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,3 +50,15 @@ h2 a {
 .btn {
   border-radius: 12px;
 }
+
+.br-theme-bars-1to10 .br-widget a {
+  // color: red;
+  background-color: red;
+}
+.br-theme-bars-1to10 .br-widget a.br-selected {
+  background-color: green;
+}
+
+.br-theme-bars-1to10 .br-widget a.br-active {
+  background-color: blue;
+}
