--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,11 +1,12 @@
 // Import your components CSS files here.
+@import "admin_consultation_cards";
 @import "alert";
 @import "avatar";
-@import "form_legend_clear";
 @import "footer";
+@import "form_legend_clear";
+@import "index_cards";
 @import "map";
+@import "map_cards";
 @import "navbar";
-@import "index-cards";
-@import "profile-cards";
+@import "profile_cards";
 @import "tags";
-@import "admin-consultation-cards";
