--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -126,13 +126,25 @@
           <%# Hidden part of about %>
           <div class="d-flex justify-content-between d-none" data-show-target="more">
             <div class="see-more-text mt-4">
-              <p>Availabilities start:</p>
-              <p>Open spaces: <span class="green"><%= @daycare.number_of_openings %></span></p>
+              <% if @daycare.opening_date %>
+                <% if @daycare.opening_date.strftime("%B") == Time.now.strftime("%B")  %>
+                  <p>Availabilities start: <span class="green"><strong><%= @daycare.opening_date.strftime("%B") %></strong></span></p>
+                <% else %>
+                  <p>Availabilities start: <span class="red"><strong><%= @daycare.opening_date.strftime("%B") %></strong></span></p>
+                <% end %>
+              <% end %>
+              <% if @daycare.number_of_openings > 0 %>
+                <p>Open spaces: <span class="green"><%= @daycare.number_of_openings %></span></p>
+              <% else %>
+                <p>Open spaces: <span class="red"><%= @daycare.number_of_openings %></span></p>
+              <% end %>
+              <p>Phone number: <span class="blue"><%= @daycare.phone_number %></span></p>
+              <p>Address: <em><span class="blue"><%= @daycare.address %></span></em></p>
             </div>
             <div class="card-trip-infos p-0">
               <div class="d-flex align-items-center pb-2">
                 <img src= "https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F13%2F2017%2F02%2F08%2F800x400-ms-frizzle-magic-school-bus.jpg&q=60" class="card-trip-user avatar-bordered-description" />
-                <p class="mb-0">Offered by <em><%= @daycare.supplier.company_name  %></em></p>
+                <p class="mb-0">Offered by <em><%= @daycare.supplier.company_name %></em></p>
               </div>
             </div>
           </div>
