--- a/app/views/daycares/index.html.erb
+++ b/app/views/daycares/index.html.erb
@@ -110,15 +110,15 @@
   </div>
 <%= form_with url: daycares_path, method: :get, class: "search-form" do |f| %>
   <%= f.label "select max price" %>
-  <%= f.select :price, (0..30).to_a, selected: params[:price] || 30, class: "form-control" %>
+  <%= f.select :price, (0..15).to_a, selected: params[:price] || 15, class: "form-control" %>
   <%# <%= label_tag "select opening date" %>
    <%# <%= text_field_tag :opening, %>
      <%# params[:opening], %>
      <%# class: "form-control", %>
      <%# placeholder: "Find an opening date" %>
     <%# %>
-  <%= f.label "openings" %>
-  <%= f.select :opening, (1..5).to_a, selected: params[:price] || 1, class: "form-control" %>
+  <%= f.label "Available spots" %>
+  <%= f.select :opening, (1..5).to_a, selected: params[:opening] || 1, class: "form-control" %>
   <%= f.submit "Search", class: "btn btn-primary" %>
   <% end %>
 </div>
