--- a/app/views/profiles/partials/_supplier-show.html.erb
+++ b/app/views/profiles/partials/_supplier-show.html.erb
@@ -13,48 +13,34 @@
           <%= link_to "Edit profile", edit_my_profile_path(@user), class: "btn btn-primary confirm-btn" %>
         </div>
         <p class="line-break pb-4"><em><%= current_user.bio %></em></p>
-          <h2>My Calendar:</h2>
-          <%= month_calendar(events: @pending_consultations) do |date, consultations| %>
-          <%= date %>
-
-          <% consultations.each do |consultation| %>
-          <div class="meeting">
-          <p><%= consultation.client.first_name %> <%= consultation.client.last_name %> <small><%= consultation.start_time.strftime('%I:%M %p') %></small></p>
-          </div>
-          <% end %>
-          <% end %>
       </div>
     </div>
 
 <%# Tabs to access daycares, consultations and add a daycare (default to daycares) %>
-<ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" data-bs-toggle="tab" data-bs-target="#test" aria-current="page" id="test-tab" href="#">Your daycares</a>
-  </li>
-  <li>
-    <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#pending" aria-current="page" id="test-pending" href="#">Pending Consultations</a>
-  </li>
-  <li>
-    <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#upcoming" aria-current="page" id="test-upcoming" href="#">Upcoming Consultations</a>
-  </li>
-
-  <%# <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Consultations</a>
-    <ul class="dropdown-menu"> %>
-      <%# <li><a class="dropdown-item nav-link" data-bs-toggle="tab" href="#" data-bs-target="#pending" aria-current="page" id="pending">Pending</a></li> %>
-      <%# <li><a class="dropdown-item" href=render 'profiles/partials/tabs/confirmed-tab'>Upcoming</a></li> %>
-      <%# <li><hr class="dropdown-divider"></li> %>
-      <%# <li><a class="dropdown-item" href= render 'profiles/partials/tabs/all-consultations'>All</a></li> %>
-    <%# </ul> %>
-  <%# </li> %>
-  <li class="nav-item">
-    <a class="nav-link" href="/daycares/new">Add new daycare</a>
-  </li>
-</ul>
+<div class="d-flex justify-content-between align-items-end">
+  <ul class="nav nav-tabs flex-grow-1">
+    <li class="nav-item">
+      <a class="nav-link active" data-bs-toggle="tab" data-bs-target="#test" aria-current="page" id="test-tab" href="#">Your daycares</a>
+    </li>
+    <li>
+      <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#pending" aria-current="page" id="test-pending" href="#">Pending Consultations</a>
+    </li>
+    <li>
+      <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#upcoming" aria-current="page" id="test-upcoming" href="#">Upcoming Consultations</a>
+    </li>
+    <li>
+      <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#calendar" aria-current="page" id="test-calendar" href="#">Calendar</a>
+    </li>
+  </ul>
+  <div class="line-break-tab">
+    <%= link_to "Add new daycare", new_daycare_path, class: "btn btn-primary confirm-btn" %>
+  </div>
+</div>
 <div class="tab-content" id="myTabContent">
   <div class="tab-pane fade show active" id="test" role="tabpanel"><%= render 'profiles/partials/tabs/daycares-tab'%></div>
   <div class="tab-pane fade" id="pending" role="tabpanel"> <%= render 'profiles/partials/tabs/pending-tab'%></div>
   <div class="tab-pane fade" id="upcoming" role="tabpanel"><%= render 'profiles/partials/tabs/confirmed-tab'%></div>
+  <div class="tab-pane fade" id="calendar" role="tabpanel"><%= render 'profiles/partials/tabs/calendar-tab'%></div>
 </div>
 <div class="mt-4">
   <%= link_to "Delete my profile", my_profile_path, method: :delete %>
