--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -22,9 +22,13 @@
   opacity: 1;
 }
 .footer .fa-heart {
-  color: #D23333;
+  color: #FF6053;
 }
 
 .line-break-footer {
   border-top: 1px solid rgba(80,80,80,0.2);
+}
+
+.footer-links a:hover {
+  color: #FF6053;
 }
