--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -255,6 +255,7 @@
             <div class="me-2 w-100">
               <%= simple_form_for [@daycare, @consultation] do |f| %>
               <%= f.input :start_time, as: :datetime, html5: true %>
+              <%= f.input :number_of_children, as: :numeric %>
               <%= f.button :submit, label: "Consult now", class: "btn btn-primary confirm-btn" %>
               <% end %>
             </div>
