--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="mt-4 mb-3">
+  <div class="mt-4 mb-3 daycare-title">
     <h1 class="mt-4 mb-0"><%= @daycare.name %></h1>
 
     <%# Sorry about this: %>
