Link in daycares show view

--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -39,6 +39,9 @@
       <% end %>
     <% end %>
     </p>
+    <div>
+      <%= link_to "like", toggle_favorite_daycare_path(daycare), remote: true, method: :post %>
+    </div>
   </div>
 
   <%# Photo gallery %>
