JS code to toggle favorite

--- a/app/views/daycares/show.html.erb
+++ b/app/views/daycares/show.html.erb
@@ -40,7 +40,7 @@
     <% end %>
     </p>
     <div>
-      <%= link_to "like", toggle_favorite_daycare_path(daycare), remote: true, method: :post %>
+      <%= link_to "Save as Favorite", toggle_favorite_daycare_path(@daycare), remote: true, method: :post %>
     </div>
   </div>
 
