--- a/app/assets/stylesheets/pages/_user-profile-owner.scss
+++ b/app/assets/stylesheets/pages/_user-profile-owner.scss
@@ -2,6 +2,28 @@
   text-align: center;
 }
 
+.banner-profile {
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+}
+
+.banner-profile h1 {
+  margin: 0;
+  color: white;
+  // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 32px;
+  font-weight: 300;
+  text-align: center;
+}
+
+.banner-profile p {
+  font-size: 20px;
+  color: white;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
 // .nav-tabs {
 //   border-top: 1px solid #dee2e6;
 // }
