--- a/app/views/profiles/partials/_supplier-show.html.erb
+++ b/app/views/profiles/partials/_supplier-show.html.erb
@@ -1,14 +1,28 @@
-<div class='container'>
+<%# <div class='container'>
   <div class="profile-header">
-    <h1 class= "mt-4">Hello, <%= current_user.company_name %>!</h1>
+  </div> %>
+
+
+  <div class="banner-profile" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(
+    <% if current_user.photos.empty? %>
+            <%= "https://www.todaysparent.com/wp-content/uploads/2021/04/10-dollar-per-day-daycare-is-absolutely-doable-1280x720.jpg" %>
+    <% else %>
+            <%= current_user.photos[0]%>
+    <% end %>
+    );">
+
+    <div class="container">
+      <h1 class= "mt-4">Hello, <%= current_user.company_name %>!</h1>
+    </div>
   </div>
 
+<div class="container">
 <%# Display profile photo here %>
   <div class="row mt-4 pb-4">
     <div class="col-lg-12">
       <div class="card-trip line-break"></div>
       <div class="card-trip mt-4">
-        <div class="d-flex justify-content-between align-items-start">
+        <div class="d-flex justify-content-between align-items-start pink">
           <h2>Your bio:</h2>
           <%= link_to "Edit profile", edit_my_profile_path(@user), class: "btn btn-primary confirm-btn" %>
         </div>
@@ -17,31 +31,32 @@
     </div>
 
 <%# Tabs to access daycares, consultations and add a daycare (default to daycares) %>
-<div class="d-flex justify-content-between">
-  <ul class="nav nav-tabs flex-grow-1">
-    <li class="nav-item">
-      <a class="nav-link active" data-bs-toggle="tab" data-bs-target="#test" aria-current="page" id="test-tab" href="#">Your daycares</a>
-    </li>
-    <li>
-      <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#pending" aria-current="page" id="test-pending" href="#">Pending Consultations</a>
-    </li>
-    <li>
-      <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#upcoming" aria-current="page" id="test-upcoming" href="#">Upcoming Consultations</a>
-    </li>
-    <li>
-      <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#calendar" aria-current="page" id="test-calendar" href="#">Calendar</a>
-    </li>
-  </ul>
-  <div class="line-break-tab">
-    <%= link_to "Add new daycare", new_daycare_path, class: "btn btn-primary confirm-btn mt-2" %>
+  <div class="d-flex justify-content-between">
+    <ul class="nav nav-tabs flex-grow-1">
+      <li class="nav-item">
+        <a class="nav-link active" data-bs-toggle="tab" data-bs-target="#test" aria-current="page" id="test-tab" href="#">Your daycares</a>
+      </li>
+      <li>
+        <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#pending" aria-current="page" id="test-pending" href="#">Pending Consultations</a>
+      </li>
+      <li>
+        <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#upcoming" aria-current="page" id="test-upcoming" href="#">Upcoming Consultations</a>
+      </li>
+      <li>
+        <a class="nav-link" data-bs-toggle="tab"  data-bs-target="#calendar" aria-current="page" id="test-calendar" href="#">Calendar</a>
+      </li>
+    </ul>
+    <div class="line-break-tab">
+      <%= link_to "Add new daycare", new_daycare_path, class: "btn btn-primary confirm-btn mt-2" %>
+    </div>
   </div>
-</div>
-<div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active" id="test" role="tabpanel"><%= render 'profiles/partials/tabs/daycares-tab'%></div>
-  <div class="tab-pane fade" id="pending" role="tabpanel"> <%= render 'profiles/partials/tabs/pending-tab'%></div>
-  <div class="tab-pane fade" id="upcoming" role="tabpanel"><%= render 'profiles/partials/tabs/confirmed-tab'%></div>
-  <div class="tab-pane fade" id="calendar" role="tabpanel"><%= render 'profiles/partials/tabs/calendar-tab'%></div>
-</div>
-<div class="mt-4">
-  <%= link_to "Delete my profile", my_profile_path, method: :delete %>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="test" role="tabpanel"><%= render 'profiles/partials/tabs/daycares-tab'%></div>
+    <div class="tab-pane fade" id="pending" role="tabpanel"> <%= render 'profiles/partials/tabs/pending-tab'%></div>
+    <div class="tab-pane fade" id="upcoming" role="tabpanel"><%= render 'profiles/partials/tabs/confirmed-tab'%></div>
+    <div class="tab-pane fade" id="calendar" role="tabpanel"><%= render 'profiles/partials/tabs/calendar-tab'%></div>
+  </div>
+  <div class="mt-4">
+    <%= link_to "Delete my profile", my_profile_path, method: :delete %>
+  </div>
 </div>
